--- a/templates/base.html
+++ b/templates/base.html
@@ -35,5 +35,6 @@
 	<script type="text/javascript" src="{% static "js/masonry.pkgd.min.js" %}"></script>
 	<script type="text/javascript" src="{% static "js/jquery.main.js" %}"></script>
     {% include 'blocks/analytics.html' %}
+	{% block extra_js %}{% endblock %}
 </body>
 </html>
