--- a/apps/meetups/templates/meetups/event_detail.html
+++ b/apps/meetups/templates/meetups/event_detail.html
@@ -11,3 +11,24 @@
 	{% include 'blocks/events_stub.html' %}
 	{% include 'blocks/about_us.html' %}
 {% endblock %}
+
+
+{% block extra_js %}
+	<script>
+		var resizeIframes = function() {
+		    $('.resizibleIframe').each(function(_, iframeWrapper) {
+		        var ratio = parseFloat($(iframeWrapper).data('ratio')),
+					newHeight = $(iframeWrapper).width() / ratio;
+		        $(iframeWrapper).height(newHeight);
+			});
+		};
+
+		$(window).resize(function() {
+		    resizeIframes();
+		});
+
+		$(function() {
+		    resizeIframes();
+		});
+	</script>
+{% endblock %}
