Add google verification code for moscowdjango@gmail.com

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="google-site-verification" content="XJsyzmdPylNZwjoEc4VbOuqfhKrDTVktGVKKl9jqCfk" />
+        <meta name="google-site-verification" content="RAskX0UNOnUGX4OiXn7jalIRZj-SwZej5FRKUlBHEnM" />
 	<title>Python.ru</title>
 	<link media="all" rel="stylesheet" href="{% static "css/all.css" %}" />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
