--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -2408,3 +2408,20 @@ input[type="submit"] {
 		height: inherit;
 	}
 }
+
+#top-banner {
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	width: 100%;
+	height: 10vw;
+}
+#top-banner a {
+	display: block;
+	width: 100%;
+	height: 100%
+}
+#top-banner.conf {
+	background-color: #d3ccc3;
+	background-image: url("../images/conf.banner.2017.jpg")
+}
