--- a/static_wireframes/css/style.css
+++ b/static_wireframes/css/style.css
@@ -1,3 +1,16 @@
+@media (min-width: 1200px) {
+	.container {
+		width: 940px;
+	}
+}
+@media (min-width: 992px) {
+	.container {
+		width: 940px;
+	}
+}
+body {
+	font-family: Open Sans, sans-serif;
+}
 .head-banner {
 	background-color: #e3e4e6;
 }
@@ -10,12 +23,17 @@
 	margin-bottom: -20px;
 }
 .navbar-right li a {
+	font-family: OpenSans-Semibold, sans-serif;
 	font-size: 20px;
 	color: #000;
+}
+.navbar-brand > img {
+	margin-left: -15px;
 }
 ul.navbar-right {
 	padding-top: 7px;
 }
+
 .hr-divider {
 	color: #979797;
 	background-color: #979797;
@@ -26,7 +44,8 @@ ul.navbar-right {
 	font-size: 28px;
 	font-weight: bold;
 	color: #000;
-	margin-top: 7px;
+	margin-top: 5px;
+	line-height: 38px;
 }
 .header-news p {
 	font-size: 20px;
@@ -35,6 +54,11 @@ ul.navbar-right {
 .header-news button {
 	font-size: 16px;
 	color: #fff;
+	font-weight: bold;
+}
+.header-text {
+	padding-left: 27px;
+	padding-right: 0;
 }
 p.tag {
 	font-size: 12px;
@@ -77,7 +101,7 @@ p.tag {
 	line-height: 20px;
 }
 .landing .col-md-4 {
-	min-height: 380px;
+	min-height: 400px;
 }
 .img-container {
 	height: 13em;
@@ -92,6 +116,7 @@ p.tag {
 	padding-top: 1px;
 	padding-bottom: 1px;
 	margin-bottom: 30px;
+	margin-left: -5px;
 }
 .subscribe button {
 	background-color: #fed243;
@@ -103,4 +128,10 @@ p.tag {
 }
 .subscribe p {
 	font-size: 14px;
+}
+.btn.btn-square {
+	border-radius: 0;
+}
+.form-control.input-square {
+	border-radius: 0;
 }
