Add vk pixel code

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,7 @@
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script type="text/javascript" src="{% static "js/masonry.pkgd.min.js" %}"></script>
   <script type="text/javascript" src="{% static "js/jquery.main.js" %}"></script>
+  <script type="text/javascript">(window.Image ? (new Image()) : document.createElement('img')).src = 'https://vk.com/rtrg?p=VK-RTRG-140885-7lEHE';</script>
   {% include 'blocks/analytics.html' %}
   {% block extra_js %}{% endblock %}
 </body>
