--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,9 @@
       {% block header_block %}
         {% include 'blocks/header.html' %}
       {% endblock %}
-      <div id="top-banner" class="conf">
+      <!-- <div id="top-banner" class="conf">
         <a href="http://conf.python.ru/?utm_source=python-ru&amp;utm_medium=banner&amp;utm_campaign=python-ru-top" target="_blank"></a>
-      </div>
+      </div> -->
 
       <main>
         {% block main_content %}{% endblock %}
