- add configurations - .env file  - add page post (draft)  - add app banners  - add some events but did not add lending page events

--- a/apps/meetups/templates/meetups/event_detail.html
+++ b/apps/meetups/templates/meetups/event_detail.html
@@ -8,7 +8,11 @@
 
 {% block main_content %}
 	{% include 'blocks/junior.html' %}
-	{% include 'blocks/events_stub.html' %}
+    {% if events %}
+	    {% include 'blocks/events.html' %}
+    {% else %}
+	    {% include 'blocks/events_stub.html' %}
+    {% endif %}
 	{% include 'blocks/about_us.html' %}
 {% endblock %}
 
