--- a/templates/blocks/analytics.html
+++ b/templates/blocks/analytics.html
@@ -1,3 +1,6 @@
+
+<script type="text/javascript">(window.Image ? (new Image()) : document.createElement('img')).src = 'https://vk.com/rtrg?p=VK-RTRG-140885-7lEHE';</script>
+
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (d, w, c) {
