--- a/templates/blocks/events_stub.html
+++ b/templates/blocks/events_stub.html
@@ -2,7 +2,7 @@
 <section class="events-section" id="events" style="padding: 49px 0 45px;">
   <div class="container">
     <div class="title-holder">
-      <h1>Ближайшие события</h1>
+      <h1>Ближайшие события!</h1>
     </div>
     <div style="margin: 0 auto; max-width: 790px; padding: 0 50px; text-align: center;">
       <p>Тут будут анонсы митапов, хакатонов и конференций про Python.<br/>
