--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,11 @@
 {% block main_content %}
 	{% include 'blocks/news.html' %}
 	{% include 'blocks/subscribe.html' %}
+    {% if events %}
+	{% include 'blocks/events.html' %}
+    {% else %}
 	{% include 'blocks/events_stub.html' %}
+    {% endif %}
 	{% include 'blocks/about_us.html' %}
 	{% include 'blocks/links.html' %}
 {% endblock %}
