--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,14 @@
   <link rel="manifest" href="{% static "favicons/manifest.json" %}">
   <link rel="mask-icon" href="{% static "favicons/safari-pinned-tab.svg" %}" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:url" content="">
+    <meta property="og:image" content="}" />
+    <meta property="og:title" content="python.ru" />
+    <meta property="og:description" content="python.ru русскоязычное сообщество языка python" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Хабр">
+
 </head>
 <body>
   <div id="wrapper">
