--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+
+{% load staticfiles nginx_image %}
 {% block title %} | {{ post.name }} {% endblock %}
 {% block head %}
 
@@ -12,7 +14,6 @@
 
 {% endblock %}
 {% block main_content %}
-{% load staticfiles nginx_image %}
 <section class="news-section" id="news">
   <div class="container">
     <div class="js-masonry" data-masonry-options='{"columnWidth": 2, "itemSelector": ".grid-item" }'>
@@ -27,10 +28,10 @@
 
                   <a href="https://twitter.com/intent/tweet?url=https://python.ru/post/{{ post.id }}&amp;text=@moscowpython {{ post.name }}%20 &amp;via=@moscowpython"><span class="icon-twitter"></span></a>
 
-                  <a rel="nofollow" href="http://vkontakte.ru/share.php?url=https://python.ru/post/{{ post.id }}"><span class="icon-vk"></span></a>
-                  <a rel="nofollow" href="https://t.me/share/url?url=https://python.ru/post/{{ post.id }}"><span class="icon-telegram"></span></a>
-                  <a rel="nofollow" href=" http://www.linkedin.com/shareArticle?mini=true&url=https://python.ru/post/{{ post.id }}"><span class="icon-linkd"></span></a>
-                  <a rel="nofollow" href="https://plus.google.com/share?url=https://python.ru/post/{{ post.id }}"><span class="icon-g-plus"></span></a>
+                  <a rel="nofollow" href="http://vkontakte.ru/share.php?url=https://python.ru/post/{{ post.id }}"><span class="icons-vk"></span></a>
+                  <a rel="nofollow" href="https://t.me/share/url?url=https://python.ru/post/{{ post.id }}"><span class="icons-telegram"></span></a>
+                  <a rel="nofollow" href=" http://www.linkedin.com/shareArticle?mini=true&url=https://python.ru/post/{{ post.id }}"><span class="icons-linkd"></span></a>
+                  <a rel="nofollow" href="https://plus.google.com/share?url=https://python.ru/post/{{ post.id }}"><span class="icons-g-plus"></span></a>
               </div>
                 <h1>{{ post.name }}</h1>
                   {% if post.url %}<time datetime="">{{ post.url }}</time>{% endif %}
