--- a/templates/base.html
+++ b/templates/base.html
@@ -19,11 +19,11 @@
   <meta name="theme-color" content="#ffffff">
 
     <meta property="og:url" content="">
-    <meta property="og:image" content="}" />
+    <meta property="og:image" content=""/>
     <meta property="og:title" content="python.ru" />
     <meta property="og:description" content="python.ru русскоязычное сообщество языка python" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Хабр">
+    <meta property="og:site_name" content="python.ru">
 
 </head>
 <body>
