--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,10 @@
   <link rel="icon" type="image/png" href="{% static "favicons/favicon-16x16.png" %}" sizes="16x16">
   <link rel="manifest" href="{% static "favicons/manifest.json" %}">
   <link rel="mask-icon" href="{% static "favicons/safari-pinned-tab.svg" %}" color="#5bbad5">
+  <link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
   <meta name="theme-color" content="#ffffff">
 
     <meta property="og:url" content="">
