--- a/templates/blocks/n_header.html
+++ b/templates/blocks/n_header.html
@@ -1,11 +1,12 @@
-{% extends 'blocks/header_no_menu.html' %}
+{% extends 'blocks/n_header_no_menu.html' %}
 
 
 {% block navigation_menu %}
   <ul class="primary-menu js-navigation">
-    <li><a href="#news">Новости</a></li>
-    <li><a href="#events">Анонсы</a></li>
     <li><a href="#about">О проекте</a></li>
+    <li><a href="#news">Блог</a></li>
+    <li><a href="#events">Мероприятия</a></li>
+    <li><a href="#vacancies">Вакансии</a></li>
     <li><a href="#resources">Ресурсы</a></li>
   </ul>
 {% endblock %}
