--- a/templates/blocks/n_news.html
+++ b/templates/blocks/n_news.html
@@ -1,10 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% load staticfiles nginx_image %}
+{% load staticfiles url_tag %}
+<section class="news-section" id="news">
+  <div class="container">
+    <div class="js-masonry" data-masonry-options='{"columnWidth": 2, "itemSelector": ".grid-item" }'>
+
+      {# Featured article #}
+      <article class="grid-item large">
+        <div class="item-holder">
+          {% if article_featured.image %}
+            <img src="{% thumbnail article_featured.image 792 529 %}" width="792" height="529" alt="">
+          {% endif %}
+          <div class="description">
+            <time datetime="">{{ article_featured.published_at|date:"j E Y" }}</time>
+            <h1><a href="{{ article_featured.url }}" target="_blank">
+              {{ article_featured.name }}
+            </a></h1>
+            {% if not article_featured.is_our %}<time>{% get_host_from_url article_featured.url %}</time>{% endif %}
+          </div>
+        </div>
+      </article>
+
+    {% include 'blocks/news_right_sidebar.html' %}
+
+    {% load banner_tag %}
+    <article class="grid-item" >
+        <div class="item-holder">
+            <div id="block_banner">{% get_banner "under_news" %}</div>
+        </div>
+    </article>
+
+      {% for article in articles_all %}
+      <article class="grid-item">
+        <div class="item-holder">
+          {% if article.image %}
+          <div class="image-holder">
+            <img src="{% thumbnail article.image 384 256 %}" width="384" height="256" alt="">
+          </div>
+          {% endif %}
+          <div class="text-holder">
+            <time datetime="{{ event.date|date:"Y-m-d H:m" }}">{{ article.published_at|date:"j E Y" }}</time>
+            <h1>
+                <a {% if article.url %}href="{{ article.url }}" target="_blank"
+                   {% else %}href="{% url 'post_page' article.id %}"{% endif %}">
+                   {{ article.name }}
+                </a>
+            </h1>
+          {% if article.url %}<time>{% get_host_from_url article.url %}</time>{% endif %}
+            {{ article.description|safe }}
+          </div>
+        </div>
+      </article>
+      {% endfor %}
+    </div>
+
+{#    <div class="btn-holder">#}
+{#      <a href="#" class="btn-default btn-more">Показать ещё</a>#}
+{#    </div>#}
+  </div>
+</section>
