--- a/templates/blocks/n_subscribe.html
+++ b/templates/blocks/n_subscribe.html
@@ -1,9 +1,8 @@
-<section class="subscribe-section">
+<section class="new_subscribe-section">
   <div class="container">
     <div class="container-inner">
       <div class="text-holder">
-        <h1>Лучшая рассылка</h1>
-        <p>Мы напишем, как будет что-то интересное, а спамить не будем, даже не просите</p>
+          <p>Подпишитесь на рассылку с последними новостями о Python, <span>причем без спама</span></p>
       </div>
       <div class="form-holder">
         <!-- subscribe form -->
