--- a/templates/blocks/our_progects.html
+++ b/templates/blocks/our_progects.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="our_projects">
+  <div class="learn_python">Наш проект</div>
+  <div class="python_week">Наш проект</div>
+  <div class="python_podcast">Наш проект</div>
+</div>
