--- a/templates/n_index.html
+++ b/templates/n_index.html
@@ -1,1 +1,7 @@
 {% extends 'n_base.html' %}
+
+{% block n_main_content %}
+    {% include "blocks\our_progects.html" %}
+    {% include 'blocks\n_subscribe.html' %}
+    {% include 'blocks\n_news.html' %}
+{% endblock %}
